# ai00_server

./: .all-contributorsrc  .gitignore  Ai00.drawio  Ai00.drawio.html  Cargo.toml  Config.toml  LICENSE  README.md  README.zh.md  README_cn.md  README_en.md  README_jp.md  README_zh.md  codebase.md  convert2ai00.py  convert_safetensors.py  embed_config.json  issues.md  package-lock.json  package.json  pnpm-lock.yaml  rwkv.md
.github/workflows/: deploy.yml  docs.yml  jekyll-gh-pages.yml  release.yml  rust.yml
assets/configs/: Config.default.toml  Config.toml
assets/scripts/: convert_ai00.py  convert_safetensors.py  convert_tokenizer.py  json2kbnf.py  requirements.txt
assets/tokenizer/: rwkv_vocab_v20230424.txt
assets/www/: index.html
assets/www/assets/: ChatApp-0cb69804.js  ChatApp-2415f4e5.js  ChatApp-27edaee8.js  ChatApp-2e9d10c4.css  ChatApp-32109474.css  ChatApp-4a763b5f.js  ChatApp-55c8cd5e.css  ChatApp-8bb8fe48.css  ChatApp-a37cc626.js  ChatApp-db9562d8.js  ChatApp-e2179bd6.css  ChatPage-2e8b777e.css  ChatPage-50633aa8.js  ChatPage-56d26995.js  ChatPage-574e27c0.css  ChatPage-66797d6a.js  ChatPage-771b0bc8.js  ChatPage-9f8a3441.js  ChatPage-a11cb35f.css  DashBoard-50332e82.js  DashBoard-54813fae.js  DashBoard-8969a715.js  DashBoard-c7f4754a.js  DashBoard-c82a966f.js  NotFoundPage-386d449e.js  NotFoundPage-75050d90.js  NotFoundPage-7511a2c3.js  NotFoundPage-86320f54.js  NotFoundPage-a7add28a.js  NotFoundPage-b57b37d4.js  index-2e2a9af5.css  index-541e9c23.js  index-800d1cd9.js  index-870fa39c.js  index-c96191a9.js  index-d3dd5206.js  index-d4a8af7e.js  index-df37d0db.js  index-f81c4ecd.css  zh-cn-0bd318ff.js  (+5 more)
assets/www/index/www/assets/: ChatPage-e490a805.js  DashBoard-a9053d0b.js  index-8ff0fea9.css
assets/www/wdlw/: wd_sdk.js
crates/ai00-core/: Cargo.toml  README.md
crates/ai00-core/src/: _run.rs  lib.rs  reload.rs  run.rs  serve.rs
crates/ai00-core/src/sampler/: bnf.rs  mirostat.rs  mod.rs  nucleus.rs  radix.rs  typical.rs  utils.rs
crates/ai00-fluid/: Cargo.toml
crates/ai00-fluid/src/: lib.rs  s.rs
crates/ai00-server/: Cargo.toml  build.rs
crates/ai00-server/src/: config.rs  main.rs  types.rs
crates/ai00-server/src/api/: adapter.rs  auth.rs  file.rs  mod.rs  model.rs
crates/ai00-server/src/api/oai/: chat.rs  choose.rs  completion.rs  embed.rs  embedding.rs  info.rs  mod.rs  state.rs
crates/converter/: Cargo.toml
crates/converter/src/: main.rs
docs/: Ai00-Features.md  FAQ.md  Introduction.md  ai00.md  codebase.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/doc-api/: debug-api.md  openai.md
docs/doc-api/imgs/: .all-contributorsrc
docs/doc-api/sdk/: js-sdk.md  python-sdk.md  rust-sdk.md
docs/doc-guide/: Simple-Usage.md  config.md  quick-start.md  release.md  source-install.md
docs/doc-models/: lora-model.md  models-name.md  rwkv-base.md  state-model.md
docs/doc-webui/: example-batch.md  example-chat.md  example-write.md  webui-config.md
docs/en/: index.md
docs/guide/: FAQ.md  features.md  quick-start.md
src/: api.rs  axum_main.rs  chat.rs  completion.rs  config.rs  embedding.rs  main.rs  middleware.rs  models.rs  run.rs  salvo_main.rs  sampler.rs  utils.rs
src/api/: adapter.rs  auth.rs  file.rs  load.rs  loading.rs  mod.rs  model.rs
src/api/oai/: chat.rs  completion.rs  embedding.rs  info.rs  mod.rs  models.rs
src/api/salvo/: adapter.rs  file.rs  load.rs  mod.rs
src/api/salvo/oai/: chat.rs  completion.rs  embedding.rs  mod.rs  models.rs
src/oai/: chat.rs  completion.rs  embedding.rs  models.rs
src/sampler/: bnf.rs  mirostat.rs  mod.rs  nucleus.rs
