[package]
authors = ["Gu ZhenNiu <448885@qq.com>", "Zhang Zhenyuan <cryscan@umich.edu>"]
categories = ["science"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition.workspace = true
homepage = "https://github.com/cgisky1980/ai00_rwkv_server"
keywords = ["LLM", "deep-learning", "model", "rwkv"]
license.workspace = true
name = "ai00-core"
repository = "https://github.com/cgisky1980/ai00_rwkv_server"
rust-version.workspace = true
version.workspace = true

[dependencies]
bytemuck = "1"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
fastrand = "2"
half = "2.4"
kbnf = "0.4.1"
voracious_radix_sort = "1.2.0"
qp-trie = "0.8"
rustc-hash = "2.0.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dependencies.anyhow]
workspace = true

[dependencies.derivative]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.memmap2]
workspace = true

[dependencies.log]
workspace = true

[dependencies.safetensors]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.web-rwkv]
workspace = true

[dependencies.salvo]
# git = "https://github.com/salvo-rs/salvo"
default-features = false
features = ["oapi"]
version = "0.71.1"
