[package]
authors = ["Gu ZhenNiu <448885@qq.com>", "Zhang Zhenyuan <cryscan@umich.edu>"]
categories = ["science"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition.workspace = true
homepage = "https://github.com/cgisky1980/ai00_rwkv_server"
keywords = ["LLM", "deep-learning", "model", "rwkv"]
license.workspace = true
name = "ai00-core"
repository = "https://github.com/cgisky1980/ai00_rwkv_server"
rust-version.workspace = true
version.workspace = true

[dependencies]
bytemuck = "1"
cbor4ii = { version = "1.0.0", features = ["serde1"] }
fastrand = "2"
futures = "0.3"
half = "2.4"
kbnf = "0.5.6"
qp-trie = "0.8"
rustc-hash = "2.0.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
voracious_radix_sort = "1.2.0"

anyhow.workspace = true
derivative.workspace = true
flume.workspace = true
itertools.workspace = true
log.workspace = true
memmap2.workspace = true
safetensors.workspace = true
serde.workspace = true
tokio.workspace = true
web-rwkv.workspace = true

[dependencies.salvo]
features = ["oapi"]
workspace = true
