[package]
authors = ["Gu ZhenNiu <448885@qq.com>", "Zhang Zhenyuan <cryscan@umich.edu>"]
categories = ["science"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition.workspace = true
homepage = "https://github.com/cgisky1980/ai00_rwkv_server"
keywords = ["LLM", "deep-learning", "model", "rwkv"]
license.workspace = true
name = "ai00-server"
repository = "https://github.com/cgisky1980/ai00_rwkv_server"
rust-version.workspace = true
version.workspace = true

[features]
default = ["embed"]
embed = ["dep:fastembed", "dep:hf-hub", "dep:text-splitter", "dep:tokenizers"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
futures-util = "0.3"
jsonwebtoken = "9.1"
lazy_static = "1.4.0"
regex = "1.8"
serde_json = "1"
sha2 = "0.10.8"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tempfile = "3.6"
toml = "0.8.6"
zip-extract = "0.1"

[dependencies.fastembed]
optional = true
version = "3.14"

[dependencies.hf-hub]
optional = true
version = "0.3"

[dependencies.text-splitter]
features = ["markdown", "tokenizers"]
optional = true
version = "0.14"

[dependencies.tokenizers]
optional = true
version = "0.19"

[dependencies.ai00-core]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.derivative]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.memmap2]
workspace = true

[dependencies.log]
workspace = true

[dependencies.safetensors]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.web-rwkv]
workspace = true

[dependencies.salvo]
# git = "https://github.com/salvo-rs/salvo"
default-features = true
features = [
    "acme",
    "affix-state",
    "cors",
    "jwt-auth",
    "logging",
    "oapi",
    "quinn",
    "serve-static",
    "sse",
]
version = "0.71.1"
