[package]
authors = ["Gu ZhenNiu <448885@qq.com>", "Zhang Zhenyuan <cryscan@umich.edu>"]
categories = ["science"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition.workspace = true
homepage = "https://github.com/cgisky1980/ai00_rwkv_server"
keywords = ["LLM", "deep-learning", "model", "rwkv"]
license.workspace = true
name = "converter"
repository = "https://github.com/cgisky1980/ai00_rwkv_server"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.3", features = ["derive"] }
memmap2 = "0.9"
web-rwkv-converter = "0.1.2"

[dependencies.anyhow]
workspace = true
